Layouts now look even nicer